[BI-184] fix alignment for courses item on explore courses page (#1217)

--- a/lms/static/sass/discussion/_discussion-override.scss
+++ b/lms/static/sass/discussion/_discussion-override.scss
@@ -189,7 +189,7 @@
     }
 }
 
-.dropdown-menu-container .menu-title .menu-image {
+.dropdown-menu-container .menu-title {
     display: flex;
     align-items: center;
 
